# computexchange

./: .dockerignore  .env.example  .gitignore  ACCRETION.md  BLACKHOLE.md  CHANGELOG.md  COMPUTE_EXCHANGE_HARDENED_ACTION_PLAN.md  CONDENSATION_LEDGER.jsonl  CONDENSATION_STATUS.md  Caddyfile  DESIGN-DIRECTION.md  Dockerfile.agent  Dockerfile.agent.dockerignore  Dockerfile.control  GO_LIVE.md  MOTION-REPORT.md  Makefile  NOTES-SITE.md  NOTICE  PACK_MANIFESTS.json  README.md  RELEASE_CANDIDATE.md  RELEASE_READINESS.md  REVISION-SITE.md  ROADMAP.md  SHIFT-REPORT-SITE.md  WAVE2_RECENSUS.md  admin-demo.html  admin.html  demo.html  docker-compose.prod.yml  docker-compose.yml  index.html
.github/: CODEOWNERS
agent/: Cargo.toml  agent.example.toml  test_float_precision.toml
agent/examples/: bench_resident_scheduler.rs
agent/src/: cluster.rs  coalesce.rs  config.rs  continuous_batch.rs  deadline.rs  executor.rs  failure.rs  hardware.rs  hawking_metal_kernel.rs  main.rs  models.rs  paged_kv.rs  pool.rs  protocol.rs  quantized_llama_batched.rs  render_preview.rs  resident_engine.rs  resident_spec_shadow.rs  resource_governor.rs  runners.rs  runtime_authority.rs  runtime_matrix_generated.rs  sandbox.rs  slot_speculation.rs  spec_receipt_bridge.rs  status.rs  types.rs  whisper_decoder_kv.rs
agent/tests/golden/: llama32_1b_q4k_greedy.hashes
census/: .gitignore  CODEBASE_BYTES.json  CODEBASE_CENSUS.json  CODEBASE_CENSUS.md  CODEBASE_LOC.json  CONDENSATION_CANDIDATES.json  DEPENDENCY_CENSUS.json  LIVE_BOUND_NO_TOUCH.json  PERFORMANCE_BASELINE.json  PYTHON_RECLAMATION.json  pack-benchmarks-files.json  pack-render-lab-files.json
cli/: .gitignore  README.md  audit.go  audit_test.go  evidence.go  evidence_test.go  go.mod  main.go  main_test.go  prove.go  prove_test.go
control/: accounts.go  admin_action_review.go  admin_action_review_test.go  admin_authority.go  admin_mutation_audit.go  admin_mutation_audit_test.go  admin_workers_integration_test.go  adversarial_test.go  alpha_request.go  api.go  artifact_authority_integration_test.go  audio_http.go  audio_http_test.go  audio_upload.go  audio_upload_test.go  audit.go  audit_test.go  authorization_matrix_test.go  beacon.go  beacon_integration_test.go  benchmark.go  billing.go  billing_schema_integration_test.go  billing_test.go  budget_integration_test.go  buildinfo.go  buildinfo_test.go  buyer.go  buyer_charge_operations.go  buyer_test.go  canary_policy.go  canary_policy_test.go  collect.go  collect_integration_test.go  collect_test.go  composite_quote_test.go  connect.go  control_test.go  crypto.go  crypto_test.go  (+173 more)
db/: schema.sql
docs/: ACCEPTABLE_USE_AND_ABUSE_RESPONSE.md  AGGRESSIVE_BACKLOG_MOUNTAIN.md  ALPHA_READINESS.md  API_CLIENT_SUPPORT.md  ARCHIVE_INDEX.md  AUDIT_RESPONSE_2026-07-10.md  BROKER_PIPELINE_AUDIT.md  CANARY_TERMS.md  CANDLE_EXPANSION_RESEARCH.md  CANDLE_FORK.md  COST_COMPARISON.md  CROSS_DEVICE_APPLE_VERIFICATION_PROMPT.md  CX_GREEDY_AGENT.md  DEPENDENCY_REVIEW.md  DETERMINISM_CLASS.md  DSAR_RUNBOOK.md  FIVE_BY_FIVE.md  FRONTEND_CONTRACT.md  GOAL_COMPUTEXCHANGE_SHIPPABILITY.md  GPU_CAPABILITY.md  HAWKING_PORT_PLAN.md  PERF.md  PERFORMANCE_PROOF.md  PLANE_B.md  PLANE_C.md  PLANE_D.md  POSTGRES_TELEMETRY_SIZING.md  PRIVACY_DATA_GOVERNANCE.md  PRIVACY_NOTICE_DRAFT.md  PRODUCT_SHAPE.md  QUICKSTART.md  ROADMAP_STATUS.md  RUNBOOKS.md  RUNTIME_MATRIX.md  SECURITY.md  SHIP_AND_DOMINATE.md  SITE-CLAIMS.md  SITE-REBUILD-REPORT.md  SITE-REBUILD-T0.md  SUPPLIER-SURFACE.md  (+6 more)
macapp/: Package.swift  README.md  appcast.xml  assemble-app.sh  sign-notarize.sh
monitoring/: README.md  alertmanager.yml  alerts.yml  blackbox.yml  prometheus.yml
ops/: asset-provenance.json  authorization-matrix.json  economics-readiness.json  go-closure-inputs.json  go-no-go.json  governance-approval-bundle.schema.json  independent-reviews.json  legal-review.json  model-provenance.json  readiness.json  support-incident-tabletop.json
proof/: 5x5-gates.json  api-client-support.generated.json  runtime-matrix.generated.json
proto/: api-client-support.source.json  enrollment-wire-fixtures.json  manifest.schema.json  runtime-matrix.generated.json  runtime-matrix.source.json
render/: CONCERNS.md  CX-ORACLES-GEOMETRY-TEN.md  CX-ORACLES-MASTER-LOOP.md  DGX-SPARK-360-SPEC.md  FINAL-WAVE-COMPLETION.md  FRONTIER-V2-CLOSURE.md  GEOMETRY-AUDIT.md  GRADER-RETURN-COMPLETION.md  MAC-STUDIO-360-SPEC.md  MEASUREMENTS.md  MORNING-REPORT.md  NOTES.md  OVERNIGHT-LOOP.md  PHOTOREAL-LEDGER.md  PHOTOREAL-PANEL.md  PHOTOREAL-SHIFT-REPORT.md  RACK-BUILD-PLAN.md  RACK-DETAIL-AUDIT.md  RACK-GROUNDING.md  RACK-LOOP.md  RACK-NOTES.md  SHIFT-REPORT.md  SITE-SCROLL-TRIO.md  _audit_desktop.py  _checkpoint_export.py  _collage.py  _contact_sheet.py  _detailpack.sh  _finalpack.sh  _finalwave_reshoot.sh  _foam3d_test.py  _geo_audit_workflow.js  _geopack.sh  _grain.py  _l19pack.sh  _panel_agg.py  _panel_build.py  _panel_isolated_workflow.js  _panel_reshoot.sh  _panel_save.py  (+31 more)
renderer/: .gitignore  Cargo.toml  DECOUPLED_SHADING_NOTES.md  README.md
renderer/examples/: decoupled_micro.rs  wgpu_smoke.rs
renderer/src/: decoupled.rs  furnace.rs  lib.rs  rng.rs  vec3.rs
renderer/tests/: decoupled_shading_test.rs  furnace_test.rs
scripts/: anytask_demo.py  api_contract.py  backup.sh  bench-local.sh  bench-nightly-gate.sh  bench-regression-gate.sh  bootstrap-prod.sh  cx  (+63 more)
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/computeexchange/: __init__.py
sdk/python/tests/: test_installed_package.py
spec-engine/: Cargo.toml
spec-engine/examples/: bench_engine_overhead.rs  emit_receipt.rs  validate_receipts.rs
spec-engine/src/: engine.rs  lib.rs  receipt.rs  traits.rs  unit.rs  verify.rs
spec-engine/src/adapters/: mod.rs  synth_render.rs  synth_token.rs
spec-engine/tests/: hardening.rs  ingest_lanes.rs  receipt_json.rs  render_adapter.rs  token_adapter.rs
token-spec-poc/: Cargo.toml  README.md
token-spec-poc/examples/: bench_ngram.rs  bench_ngram_candidates.rs
token-spec-poc/src/: candle_target.rs  lib.rs  main.rs
token-spec-poc/tests/: lossless.rs
(+570 files in other folders)
