[package]
name = "cx-agent"
version = "0.1.0"
edition = "2021"
description = "Compute Exchange Apple Silicon supplier agent"
license = "MIT"

[[bin]]
name = "cx-agent"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
candle-core = "=0.10.2"
candle-nn = "=0.10.2"
candle-transformers = "=0.10.2"
clap = { version = "4.5", features = ["derive"] }
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sysinfo = "0.31"
thiserror = "1.0"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo"] }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[dev-dependencies]
flate2 = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
