[package]
name = "cx-renderer"
version = "0.0.1"
edition = "2021"
description = "Computexchange Track-3 renderer: a Rust-native, reuse-first path tracer. Phase 0 = pure-CPU furnace-gated integrator (M0) + wgpu/WGSL dual-backend compute plumbing (M1). Separate from the cx-agent inference crate on purpose — rendering and job-execution are different concerns."
license = "MIT"

# NOTE ON CRATE PLACEMENT: this is a STANDALONE crate, not a workspace member.
# The repo has no root Cargo.toml / [workspace]; agent/ is itself a standalone
# crate. Adding a [workspace] at the repo root now would silently swallow agent/
# into a shared target dir and Cargo.lock, changing how that shipping crate
# builds. Keeping renderer/ standalone mirrors agent/ exactly and keeps the two
# concerns (render vs. inference) isolated, which is the stated intent.

[lib]
name = "cx_renderer"
path = "src/lib.rs"

# The CPU furnace core (M0) is deliberately ZERO-dependency: nothing to fetch,
# nothing to audit, and the white-furnace correctness gate depends on no third
# party. The GPU plumbing (M1) is gated behind an OPTIONAL `gpu` feature so that
# `cargo build` / `cargo test` for the furnace never pulls the (large) wgpu tree.
[features]
default = []
# `--features gpu` pulls wgpu + the WGSL compute round-trip example. On Apple
# Silicon this requests the Metal backend explicitly; on a RunPod NVIDIA box the
# same code requests Vulkan (the M1 dual-backend proof — one codebase, backend
# chosen at runtime). Mirrors agent/Cargo.toml's metal|cuda build-time split,
# except wgpu lets us pick the backend at RUNTIME from one binary.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
wgpu = { version = "22", optional = true }
pollster = { version = "0.3", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }

# The wgpu/WGSL Metal (or Vulkan) smoke test. `required-features` means a plain
# `cargo build` skips it entirely; run it with:
#   cargo run --example wgpu_smoke --features gpu
[[example]]
name = "wgpu_smoke"
required-features = ["gpu"]

# Optimize the crate-under-test so `cargo test` (which builds in the test
# profile) runs the furnace at full speed even without --release. The furnace
# core is a tight numeric loop; unoptimized it is ~20-40x slower.
[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
