[package]
name = "cx-spec-engine"
version = "0.1.0"
edition = "2021"
description = "ComputeExchange-owned speculation substrate: SpecUnit -> DraftProducer -> Verifier -> AcceptancePolicy -> RepairPolicy -> SpecReceipt. The monomorphized Rust re-expression of scripts/spec-lab/cx_speculative_core.py, with a receipt schema that round-trips to the JSON the Go control plane ingests."
license = "MIT"

# Standalone crate — deliberately NOT a member of the agent/ workspace. The empty
# [workspace] table makes this its own workspace root, so `cargo build` here never
# walks up the repo tree looking for a parent workspace to join (there is none
# today, but this pins the isolation the consolidation plan's Branch A requires).
[workspace]

[dependencies]
# serde: the derive-driven (de)serialization for the unified SpecReceipt.
# serde_json: required to (a) emit/ingest the on-wire receipt JSON the Go plane
# reads and (b) type the free-form `details` bag (BTreeMap<String, serde_json::Value>).
# These are the ONLY dependencies (plan Branch A: "only serde/serde_json as deps").
# Normal (not dev) deps so the integration tests under tests/ can name serde_json too.
# serde_json's `float_roundtrip` feature makes float PARSING round-trip-exact
# (its default parser is faster but may drift the last ULP) — mandatory for a
# receipt/ledger schema whose costs must survive a to-JSON/from-JSON cycle
# bit-for-bit, which the round-trip tests assert.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
