[package]
name = "token-spec-poc"
version = "0.1.0"
edition = "2021"
description = "Branch C — CX-owned lossless token speculative-decode lane (POC). Recon + design in docs/research/TOKEN_LANE_FORK_DESIGN.md."
license = "MIT"

[lib]
name = "token_spec_poc"
path = "src/lib.rs"

[[bin]]
name = "token-spec-poc"
path = "src/main.rs"

# DEFAULT build is pure Rust: the lossless core + n-gram drafter + mock target +
# receipt. No candle, no GPU, no model download — `cargo test` proves losslessness
# and the acceptance harness runs in milliseconds. This is the guaranteed-green,
# always-buildable-in-sandbox surface.
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# The REAL-model backend is opt-in. `--features candle` pulls the exact same
# candle 0.10 stack the agent already ships (resolved from the local cargo cache),
# loads a quantized-Llama GGUF, and measures acceptance on the model's own greedy
# stream. `metal` adds the Apple-Silicon GPU path (same gate as agent/Cargo.toml).
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["onig"], optional = true }
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"], optional = true }

[features]
default = []
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[profile.release]
lto = true
codegen-units = 1
