[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "computeexchange"
dynamic = ["version"]
description = "Dependency-free Python client for the Computexchange buyer API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Documentation = "https://computexchange.net"

[tool.setuptools]
packages = ["computeexchange"]

[tool.setuptools.dynamic]
version = { attr = "computeexchange.__version__" }
